manifest/objects/APTS_Integration_Repository_Params__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Integration_Repository__c</fullName>
        <label>Integration Repository</label>
        <referenceTo>APTS_Integration_Repository__c</referenceTo>
        <relationshipLabel>Integration Repository Params</relationshipLabel>
        <relationshipName>Integration_Repository_Params</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Param_Type__c</fullName>
        <label>Param Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Header</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Param_Value__c</fullName>
        <label>Param Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Repository Param</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Integration_Repository__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Integration Repository Param Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Repository Params</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>